--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitest/ui": "latest",
     "axios": "^1.3.6",
     "happy-dom": "^13.7.3",
+    "msw": "^2.2.10",
     "notistack": "^3.0.1",
     "react-router-dom": "^6.10.0",
     "vite": "^5.1.6",
